# primebot_backend

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  calibration.sh  check_matches.sh  daily_team_updates.sh  docker-compose.yml  main.sh  manage.py  openapi.yml  pyproject.toml  requirements.prod.txt  requirements.txt  restart_bots.sh  run_bot.sh  run_bots.sh  weekly_update.sh
.docker/: Caddyfile
.github/: CODEOWNERS
app_api/: OpenApiDocumentation.json  __init__.py  tests.py  urls.py  views.py
app_prime_league/: admin.py  apps.py  factories.py  model_manager.py  models.py  teams.py  tests.py  views.py
bots/: __init__.py  bot.py  discord_bot.py  message_dispatcher.py  messages.py  telegram_bot.py  utils.py  validation_messages.py
communication_interfaces/: __init__.py  base_bot.py  message_dispatcher.py  message_factory.py  messages.py  utils.py  validation_messages.py
comparing/: game_comparer.py  games_check_executor.py  matches_check_executor.py  member_comparer.py  new_lineup_check_executor.py
core/: api.py  async_wrapper.py  cluster_job.py  commands.py  github.py  settings_maker.py  temporary_match_data.py  test_utils.py  update_schedule_command.py
data_crawling/: api.py  tests.py
discord_interface/: discord_bot.py
modules/: api.py  connector.py  match_comparer.py  provider.py  team_comparer.py  temporary_match_data.py  test_utils.py
parsing/: logging.py  managers.py  parser.py  regex_operations.py
prime_league/: api.py  classes.py  database.py  debug.py  delete_team.py  (+6 more)
(+411 files in other folders)
