[project]
name = "primebot-backend"
version = "0.1.0"
description = "PrimeBot Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "babel>=2.17.0",
    "croniter>=6.0.0",
    "cryptography>=45.0.4",
    "discord-py>=2.5.2",
    "django>=5.0",
    "django-admin-interface>=0.30.1",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-ical>=1.9.2",
    "django-q2==1.6.2",
    "django-request>=1.7.0",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "factory-boy>=3.3.3",
    "gunicorn>=23.0.0",
    "hiredis>=3.2.1",
    "multidict==6.5.1",
    "niquests>=3.14.1",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.13.2",
    "python-telegram-bot==13.15",
    "redis>=6.2.0",
    "requests>=2.32.4",
]

[tool.black]
line-length = 120
target-version = ['py39']
skip-string-normalization = true
exclude = 'migrations/'

[tool.isort]
line_length = 120
forced_separate = 'tests'
skip = '.venv'
skip_glob = '**/migrations/*.py'
profile = "black"
multi_line_output=3

# ==== Coverage ====
[tool.coverage.run]
omit = ["*/migrations/*", "*/tests/*", "venv/*", "*/wsgi.py", "*/asgi.py", "*.html"]
plugins = ["django_coverage_plugin"]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
    "pre-commit>=4.2.0",
]
